--- a/src/example/dialog-data-example-dialog.scss
+++ b/src/example/dialog-data-example-dialog.scss
@@ -1,12 +1,8 @@
 .form-wrapper {
     display: flex;
     flex-direction: column;
-    width: 70vw;
     gap: 16px;
     flex-grow: 1;
-
-    
-
 }
 
 .row {
@@ -16,8 +12,6 @@
     gap: 16px;
     flex-grow: 1;
     align-items: start;
-
-    
 }
 
 .col {
@@ -35,4 +29,28 @@
     border: 1px solid #ccc;
     border-radius: 4px;
     padding: 16px;
+}
+
+
+
+.dialog-header {
+    background-color: cornflowerblue;
+    display: flex ;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 8px;
+    color: white;
+    .dialog-title {
+        display: flex;
+        flex-direction: row;
+        align-items: start;
+        justify-content: start;
+        gap: 8px;
+        flex-grow: 1;
+    }
+}
+
+.dialog-content {
+    padding-top: 16px;
 }
