--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,11 @@ body {
 html, body {
   height: 100%;
 }
+
+.mat-resize-dialog-container .mat-mdc-dialog-container {
+  width: 50%;
+  margin: auto;
+  min-width: 50vw;
+  min-height: 50vh !important;
+  resize: both;
+}
